--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,16 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,700);
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
     font-family: "Rubik", sans-serif;
 }
 
 
 .header {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -54,4 +59,69 @@ body {
 
 .btn:hover{
     background: #f10d37;  
+}
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    width: 360px;
+    padding: 30px;
+    border-radius: 6px;
+    background-color: #FFFF;
+    box-shadow: 0px 5px 20px rgb(27, 108, 114, 0.25);
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    left: 10px;
+    bottom: -10px;
+    z-index: -1;
+    width: calc(100% - 20px);
+    height: 100%;
+    background-color: #FFFF;
+    box-shadow: 0px 5px 20px rgb(27, 108, 114, 0.25);
+    border-radius: 6px;
+}
+
+.card-city{
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1;
+    color: #000;
+}
+
+.card-city span{
+    display: inline-block;
+    vertical-align: text-top;
+    padding: 3px 5px;
+    background-color: #E5464F;
+    border-radius: 6px;
+    color: #FFFF;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1;
+}
+
+.card-weather{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card-value{
+    font-size: 92px;
+    line-height: 1;
+    color: #000;
+}
+
+.card-value sup {
+    font-size: 50%;
+}
+
+.card-description{
+    font-size: 20px;
+    line-height: 1.2;
 }
