--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Rubik:300,regular,500,700);
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -124,4 +125,20 @@ body {
 .card-description{
     font-size: 20px;
     line-height: 1.2;
+}
+
+.footer {
+    margin-top: auto;
+    width: 100%;
+    padding: 8px 15px;
+    background-color: #E3F1EE;
+    font-size: 14px;
+    line-height: 1;
+    text-align: center;
+    color: #2E7695;
+}
+
+.footer a{
+    color: #2E7695;  
+    text-decoration: none;
 }
