--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ body {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
-    width: 360px;
+    min-width: 360px;
     padding: 30px;
     border-radius: 6px;
     background-color: #FFFF;
