--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@ body {
 
 
 .header {
+    position: relative;
+    z-index: 1;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -29,21 +31,57 @@ body {
 }
 
 .form {
-    display: flex;
-    justify-content: space-between;
-    width: 460px;
+    width: 470px;
     height: 54px;
     background-color: #FFFF;
     border-radius: 6px;
 }
 
+
+
+.select-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .input {
+    cursor: pointer;
     flex-grow: 1;
-    padding: 15px;
+    padding: 14px 16px;
     font-weight: 300;
     font-size: 20px;
     line-height: 1;
     color: #000;
+}
+
+.select-body {
+    height: 0px;
+    overflow-y: auto;
+    background-color: #FFFF;
+    font-weight: 300;
+    font-size: 20px;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    border: 1px solid #4CB8C4;
+    border-radius: 6px;
+    max-width: 325px;
+    transition: height .2s;
+}
+
+form._active .select-body{
+   height: auto;
+}
+
+.select-body-item{
+    cursor: pointer;
+    padding: 15px;
+}
+
+.select-body-item:hover{
+    background-color: #a5e1e8;
 }
 
 .btn {
